--- a/index.htm
+++ b/index.htm
@@ -22,8 +22,7 @@
 </head>
 <body>
   <!--div id="loginBtn" onclick="VK.Auth.login(authInfo);"></div-->
-  <div id="content">
-  </div>
+  <div id="content"></div>
   <script src="js/app.js"></script>
 </body>
 </html>
